crates/functions/src/tests/string_binary/snapshots/substr/query_substr_hex_encode_negative.snap
---
source: crates/functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(hex_encode('hello world'), -5, 4) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| 26C6   |",
        "+--------+",
    ],
)
