crates/functions/src/tests/string_binary/snapshots/substr/query_substr_integer_positive.snap
---
source: crates/functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(12345, 2, 3) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| 234    |",
        "+--------+",
    ],
)
