crates/functions/src/tests/string_binary/snapshots/substr/query_substr_large_length.snap
---
source: crates/functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('mystring', 3, 100) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| string |",
        "+--------+",
    ],
)
