crates/functions/src/tests/string_binary/snapshots/substr/query_substr_multiple_rows_negative.snap
---
source: crates/functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(col, -2, 2) as result FROM (VALUES ('hello'), ('world'), ('test')) AS t(col)\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| lo     |",
        "| ld     |",
        "| st     |",
        "+--------+",
    ],
)
