crates/functions/src/tests/string_binary/snapshots/substr/query_substr_negative_index_no_length.snap
---
source: crates/functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('mystring', -3) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| ing    |",
        "+--------+",
    ],
)
